--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     container_name: xiv-mitm-latency-mitigator
     image: bankja/xivlm:latest
     environment:
+      - MITIGATOR=true # Default to true. Set to false when need to disable XivMitmLatencyMitigator script.
       - LOCAL=true # Default to true. Set to false when not use within LAN (E.g. Connect through VPN only).
+      - LEGACY=false # Default to false. Set to true if you want to use iptables-legacy.
       - VPN=false # Default to false. Set to true if you use this on private VPN server.
-      - LEGACY=false # Change to true if you want to use iptables-legacy.
       - VPN_INTERFACE_1=wg0 # Find by using "ip a" command.
       # - VPN_INTERFACE_2=wg1
       # - VPN_INTERFACE_3=<Add many VPN interfaces as you want.>
@@ -15,7 +16,7 @@ services:
     network_mode: host
     cap_add:
       - NET_ADMIN
-    restart: always
+    restart: unless-stopped
     logging:
       driver: "json-file"
       options:
