--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: bankja/xivlm:latest
     environment:
       - MITIGATOR=true # Default to true. Set to false when need to disable XivMitmLatencyMitigator script.
+      # - DEFINITIONS_URL=https://pastebin.com/raw/jf66WP69 # URL of 6.38 definitions.json.
       - LOCAL=true # Default to true. Set to false when not use within LAN (E.g. Connect through VPN only).
       - LEGACY=false # Default to false. Set to true if you want to use iptables-legacy.
       - VPN=false # Default to false. Set to true if you use this on private VPN server.
