Support more arguments via environment variable.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       # - DEFINITIONS_URL=https://pastebin.com/raw/jf66WP69 # URL of 6.38 definitions.json.
       - LOCAL=true # Default to true. Set to false when not use within LAN (E.g. Connect through VPN only).
       - LEGACY=false # Default to false. Set to true if you want to use iptables-legacy.
+      # - NFTABLES=false # Default to false. Set to true if you use nftables.
+      # - EXTRA_DELAY=0.035 # Default value is 0.075 ms.
+      # - MEASURE_PING=false # Default to false. Set to true may help improve respond time on private VPN server.
       - VPN=false # Default to false. Set to true if you use this on private VPN server.
       - VPN_INTERFACE_1=wg0 # Find by using "ip a" command.
       # - VPN_INTERFACE_2=wg1
